[metadata]
name=pyslr
authro=Sebastian Werner
authro-email=werner@tu-berlin.de
summary= Package for conducting systematic literature reviews
license= Apache-2
home-page = https://github.com/tawalaya/pyslr
desciption-file = Readme.md
requires-pyhton = >=3.8

[options]
packages = find:

[files]
packages = pyslr
