[bdist_wheel]
universal=0

[metadata]
name=pyslr
author=Sebastian Werner
author_email=werner@tu-berlin.de
summary= Package for conducting systematic literature reviews
license= Apache-2
home-page = https://github.com/tawalaya/pyslr
description-file =
    README.rst
python_requieres = >=3.8
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Environment :: Console

[options]
packages = find:

[files]
package = 
    pyslr